--- a/Desktop/report/composer.json
+++ b/Desktop/report/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "yajra/laravel-datatables-oracle": "^10.1"
     },
     "require-dev": {
         "laravel/breeze": "^1.11",
